# pipecat-ringg

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml
src/pipecat_ringg/: __init__.py  stt.py
tests/: test_stt.py
